--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -362,6 +362,22 @@
     <string name="settings_advanced_poke_jobscheduler_content">Trigger a force run of any database download jobs in Now Playing. <b>This will ignore any constraints such as charging and WiFi requirements!</b></string>
     <string name="settings_advanced_poke_jobscheduler_toast">Done, monitor log output for results</string>
 
+    <string name="settings_external_access_title">External Access</string>
+    <string name="settings_external_access_content">Allow access for external apps such as Tasker to control Ambient Music Mod</string>
+    <string name="settings_external_access_switch">Allow External Access</string>
+    <string name="settings_external_access_footer">This option allows external apps such as Tasker to control Ambient Music Mod. With it, you can enable/disable recognition and run recognitions as required, using Intents.</string>
+    <string name="settings_external_access_footer_link">How to use External Access</string>
+    <string name="settings_external_access_toggle_title">Allow Enabling/Disabling Recognition</string>
+    <string name="settings_external_access_toggle_content">Allows external apps to enable &amp; disable recognition</string>
+    <string name="settings_external_access_recognition_title">Allow Starting Recognitions</string>
+    <string name="settings_external_access_recognition_content">Allows external apps to start recognitions, both On Device and Online if supported.\n<b>Please note:</b> The external app does not receive the result of recognitions</string>
+    <string name="settings_external_access_require_token_title">Require Access Token</string>
+    <string name="settings_external_access_require_token_content">Require external apps to provide an Access Token in their Intents for authentication.\n<b>This is highly recommended if you are allowing starting recognitions.</b></string>
+    <string name="settings_external_access_token_title">Access Token</string>
+    <string name="settings_external_access_token_content">Your access token is: %1s\n\nTap to copy, long press to reset.\n\nCheck the Wiki page for more info on how to use this token.</string>
+    <string name="settings_external_access_token_copied">Copied!</string>
+    <string name="settings_external_access_encryption_failed">Failed to load settings, you may need to reinstall Ambient Music Mod</string>
+
     <string name="title_settings_bedtime">Bedtime</string>
     <string name="settings_bedtime_switch">Disable at Bedtime</string>
     <string name="settings_bedtime_start">Start Time</string>
